// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render basic alert correctly 1`] = `
<div
  className="__rta_container undefined"
>
  <div
    className="__rta_wrapper undefined _rta_type_basic"
  >
    <div
      className="__rta_icon"
    >
      <img />
    </div>
    <div
      className="__rta_content"
    >
      test
    </div>
  </div>
</div>
`;

exports[`Alert should render correctly 1`] = `
<div
  className="__rta_container undefined"
>
  <div
    className="__rta_wrapper undefined success"
  >
    <div
      className="__rta_icon"
    >
      <img />
    </div>
    <div
      className="__rta_content"
    >
      this is a test alert
    </div>
    <div
      className="__rta_close"
      onClick={[Function]}
    >
      <img
        src={
          Object {
            "process": [Function],
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Alert should render error alert correctly 1`] = `
<div
  className="__rta_container undefined"
>
  <div
    className="__rta_wrapper undefined _rta_type_error"
  >
    <div
      className="__rta_icon"
    >
      <img />
    </div>
    <div
      className="__rta_content"
    >
      test
    </div>
  </div>
</div>
`;

exports[`Alert should render info alert correctly 1`] = `
<div
  className="__rta_container undefined"
>
  <div
    className="__rta_wrapper undefined _rta_type_info"
  >
    <div
      className="__rta_icon"
    >
      <img />
    </div>
    <div
      className="__rta_content"
    >
      test
    </div>
  </div>
</div>
`;

exports[`Alert should render success alert correctly 1`] = `
<div
  className="__rta_container undefined"
>
  <div
    className="__rta_wrapper undefined _rta_type_success"
  >
    <div
      className="__rta_icon"
    >
      <img />
    </div>
    <div
      className="__rta_content"
    >
      test
    </div>
  </div>
</div>
`;

exports[`Alert should render warning alert correctly 1`] = `
<div
  className="__rta_container undefined"
>
  <div
    className="__rta_wrapper undefined _rta_type_warning"
  >
    <div
      className="__rta_icon"
    >
      <img />
    </div>
    <div
      className="__rta_content"
    >
      test
    </div>
  </div>
</div>
`;

exports[`Alert should render without close icon when closeButton prop equals false 1`] = `
<div
  className="__rta_container undefined"
>
  <div
    className="__rta_wrapper undefined success"
  >
    <div
      className="__rta_icon"
    >
      <img />
    </div>
    <div
      className="__rta_content"
    >
      this is a test alert
    </div>
  </div>
</div>
`;
